--- a/templates/register.html
+++ b/templates/register.html
@@ -50,7 +50,7 @@
   					</div>
 
 					<div class="form-group">
-						<button type="button" class="btn btn-danger btn-block">Sign up</button>
+						<button type="submit" class="btn btn-danger btn-block">Sign up</button>
 					</div>
 
 					</form>
