--- a/templates/register.html
+++ b/templates/register.html
@@ -34,14 +34,29 @@
 
 					<div class="form-group">
 					    {{ form.name(class="form-control", placeholder="Enter your full name") }}
+					    <ul>
+					    	{% for error in form.name.errors %}
+					    		<li style="color:red;">{{ error }}</li>
+					    	{% endfor %}
+					    </ul>
 					</div>
 
 					<div class="form-group">
 						{{ form.username(class="form-control", placeholder="Enter a username") }}
+						<ul>
+					    	{% for error in form.username.errors %}
+					    		<li style="color:red;">{{ error }}</li>
+					    	{% endfor %}
+					    </ul>
 					</div>
 
 					<div class="form-group">
 						{{ form.password(class="form-control", placeholder="Enter your password") }}
+						<ul>
+					    	{% for error in form.password.errors %}
+					    		<li style="color:red;">{{ error }}</li>
+					    	{% endfor %}
+					    </ul>
 					</div>
 
 					<div class="form-group">
