--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -58,14 +58,14 @@
 						<div class="panel-body">
 							<div class="row pad">
 								<div class="col-lg-12">
-									<img src="{{ url_for('static', filename='imgs/anonymous.png') }}" class="img-responsive img-circle center-block" alt="Image" />
+									<img src="{{ current_user.image }}" class="img-responsive img-circle center-block" alt="Image" />
 								</div>
 							</div>
 							<div class="row pad">
 								<div class="col-lg-4 col-lg-offset-2 text-center">
 									<strong>
 										Tweets <br />
-										56 
+										{{ total_tweets }} 
 									</strong> 
 								</div>
 								<div class="col-lg-4 text-center">
