--- a/templates/profile.html
+++ b/templates/profile.html
@@ -78,6 +78,11 @@
 								<i class="glyphicon glyphicon-th-list"></i> FOLLOWERS COUNT: 
 								<strong class="pull-right">{{ followed_by|length }}</strong>
 							</li>
+							{% if display_follow %}
+							<li class="list-group-item">
+								&nbsp; <strong class="pull-right"><a href="{{ url_for('follow', username=current_user.username) }}">FOLLOW</a></strong>
+							</li>
+							{% endif %}
 						</ul>
 					</div>
 				</div>
@@ -110,7 +115,7 @@
 													<div class="col-lg-10">
 														<div>
 															<strong class="mid">{{ tweet.user.name }}</strong> 
-															<small><em>@{{ tweet.user.username }}</em></small>  
+															<small><em><a href="{{ url_for('profile', username=tweet.user.username) }}">@{{ tweet.user.username }}</a></em></small>  
 															{{ (current_time - tweet.date_created)|time_since }}
 														</div>
 														<div class="pad">
@@ -133,7 +138,7 @@
 													<div class="col-lg-10">
 														<div>
 															<strong class="mid">{{ follower.name }}</strong> 
-															<small><em>@{{ follower.username }}</em></small>
+															<small><em><a href="{{ url_for('profile', username=follower.username) }}">@{{ follower.username }}</a></em></small>
 														</div>
 														<div class="row pad">
 															<hr />
