--- a/templates/base.html
+++ b/templates/base.html
@@ -39,11 +39,14 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
                     <ul class="nav navbar-nav navbar-right">
+                        {% if not logged_in_user.is_authenticated %}
                         <li><a href="{{ url_for('register') }}">Sign Up</a></li>
                         <li><a href="#login" data-toggle="modal" data-keyboard="false">Login</a></li>
+                        {% else %}
                         <li class="{% block timeline_active %}{% endblock %}"><a href="{{ url_for('timeline') }}">Timeline</a></li>
                         <li class="{% block profile_active %}{% endblock %}"><a href="{{ url_for('profile') }}">My Profile</a></li>
                         <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        {% endif %}
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div>
