Made Minor Changes to timeline

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -24,7 +24,7 @@
 								<div class="col-lg-4 text-center">
 									<strong>
 										Followers <br />
-										300 
+										{{ followed_by_count }} 
 									</strong>
 								</div>
 							</div>
