--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
             </div>
         </div>
 
+        {% block nav %}
         <nav class="navbar navbar-default" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -35,7 +36,6 @@
                     </button>
                     <a class="navbar-brand" href="./">Eng@ge!</a>
                 </div>
-        
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -51,6 +51,7 @@
                 </div><!-- /.navbar-collapse -->
             </div>
         </nav>
+        {% endblock %}
 
         <div class="container">
 
